animations for card and button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,20 +21,22 @@
       <div class="card">
         <span class="card-title"></span><br />
         <span class="temp"
-          ><img id="therm" src="/assets/thermometer-half.svg" />
-          Temperature: </span
+          ><img
+            id="therm"
+            src="/assets/thermometer-half.svg"
+          />Temperature: </span
         ><br />
         <span class="hum"
-          ><img id="hum" src="/assets/droplet-fill.svg" /> Humidity: </span
+          ><img id="hum" src="/assets/droplet-fill.svg" />Humidity: </span
         ><br />
         <span class="wind-speed"
-          ><img id="wind" src="/assets/wind.svg" /> Wind Speed: </span
+          ><img id="wind" src="/assets/wind.svg" />Wind Speed: </span
         ><br />
         <span class="wind-direction"
-          ><img id="comp" src="/assets/compass.svg" /> Wind Direction: </span
+          ><img id="comp" src="/assets/compass.svg" />Wind Direction: </span
         ><br />
         <span class="feels-like"
-          ><img id="feels-like" src="/assets/feels-like.svg" /> Feels Like:
+          ><img id="feels-like" src="/assets/feels-like.svg" />Feels Like:
         </span>
       </div>
     </div>
